# my_simulation

./: CMakeLists.txt  README.md  package.xml
config/: cam0_pinhole.yaml  ego_planner_config.yaml  mavros_config.yaml  px4_config.yaml  rviz_config.rviz  vins_config.yaml
launch/: ego_planner.launch  gazebo_world.launch  mavros.launch  px4.launch  rviz_view.launch  sim_all.launch  vins.launch
models/iris_with_depth/: model.config  model.sdf
scripts/: fix_vins_odom.py  trajectory_tracker.py
worlds/: obstacle.world
